k3s/overlays/uat/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okard-backend
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      
      containers:
        - name: okard-backend
          image: ghcr.io/o-kard/okard-backend
