k3s/overlays/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okard-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: api-uat.081246.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: okard-backend-svc
                port:
                  number: 80
